build.log
main.cpp: In function 'int main()':
main.cpp:8:11: error: 'fun' was not declared in this scope
   int x = fun(40, 2);
           ^~~
main.cpp:13:15: warning: array subscript has type 'char' [-Wchar-subscripts]
   buffer[index] = '1'; /* Code smell: 'char' type used as array index */
               ^
